# PyLine2

./: .gitignore  CMakeLists.txt  README.md
Source/: Main.cpp  PythonRenderer.cpp  PythonRenderer.h  TimelineModel.cpp  TimelineModel.h
py/: _render_util.py  alva_click_train.py  alva_glitch_pulses.py  alva_sine_ticks.py  alva_sparse_noise.py  choral_intervals.py  comb_dust_resonator.py  degraded_loop_residue.py  drum_loop_basic_120.py  drum_loop_boom_bap_92.py  drum_loop_break_90.py  drum_loop_dnb_174.py  drum_loop_house_128.py  drum_loop_minimal_techno_124.py  fennesz_glitch_wash.py  fennesz_shimmer_pad.py  fennesz_tape_haze.py  glitch_perc_kit.py  glitch_tone_fragments.py  granular_chop_drift.py  melodic_fragments.py  memory_ghost_loop.py  micro_edit_skip.py  micropulse_diffraction.py  micropulse_lattice.py  microtonal_steps.py  oval_cellwise_degrade_loop.py  oval_fragile_markerbed.py  oval_skip_density_by_position.py  oxide_flake_loop.py  sine.py  skipping_cd_surface.py  slow_arpeggio.py  spectral_dust.py  spectral_freeze_grains.py  splice_grid_cutter.py  tape_wow_microloop.py
